--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,47 +17,57 @@
 
 <div class="container" >
 	<div class="row">
-		<h3 class="h3-title">Articles</h3>
-		<div class="col-sm-6">
-
+		<div class="col-sm-8">
 			
-			<% first_article = @articles_home.first %>
-			<%= link_to article_path(first_article), target: "_self" do %>
-				<% if first_article.image %>
-					<%= image_tag first_article.image, class: "article-image-main" %>
-				<% else %>
-					<%#= image_tag '/assets/placeholder.jpg', class: "article-image-main" %>
-					<div class="text-center article-text-main"><span><%= first_article.title %></span></div>
-				<% end %>
-			<% end %>
-	
-			<% second_articles = @articles_home.slice(1..2) %>
-			<% second_articles.each do |article| %>
-				<%= link_to article_path(article), target: "_self" do %>
-					<% if article.image %>
-						<%= image_tag article.image, class: "article-image-second-long" %>
-					<% else %>
-						<div class="text-center article-text-second-long"><span><%= article.title %></span></div>
+			<div class="row">
+				<div class="col-sm-9"><h3 class="h3-title">Articles</h3></div>
+				<div class="col-sm-3">
+					<%= link_to articles_path, class: 'btn btn-default align-bottom' do %>
+						View all articles
 					<% end %>
-				<% end %>
-			<% end %>
+				</div>
+			</div>
+			
+			<div class="row">			
+				<div class="col-sm-9">
+					<% first_article = @articles_home.first %>
+					<%= link_to article_path(first_article), target: "_self" do %>
+						<% if first_article.image %>
+							<%= image_tag first_article.image, class: "article-image-main" %>
+						<% else %>
+							<%#= image_tag '/assets/placeholder.jpg', class: "article-image-main" %>
+							<div class="text-center article-text-main"><span><%= first_article.title %></span></div>
+						<% end %>
+					<% end %>
+			
+					<% second_articles = @articles_home.slice(1..2) %>
+					<% second_articles.each do |article| %>
+						<%= link_to article_path(article), target: "_self" do %>
+							<% if article.image %>
+								<%= image_tag article.image, class: "article-image-second-long" %>
+							<% else %>
+								<div class="text-center article-text-second-long"><span><%= article.title %></span></div>
+							<% end %>
+						<% end %>
+					<% end %>
+				</div>
+
+				<div class="col-sm-3">
+					<% second_articles = @articles_home.slice(3..6) %>
+					<% second_articles.each do |article| %>
+						<%= link_to article_path(article), target: "_self" do %>
+							<% if article.image %>
+								<%= image_tag article.image, class: "article-image-second" %>
+							<% else %>
+								<div class="text-center article-text-second"><span><%= article.title %></span></div>
+							<% end %>
+						<% end %>
+					<% end %>
+				</div>
+			</div>
 
 		</div>
-		<div class="col-sm-2">
 
-		<% second_articles = @articles_home.slice(3..6) %>
-		<% second_articles.each do |article| %>
-			<%= link_to article_path(article), target: "_self" do %>
-				<% if article.image %>
-					<%= image_tag article.image, class: "article-image-second" %>
-				<% else %>
-					<div class="text-center article-text-second"><span><%= article.title %></span></div>
-				<% end %>
-			<% end %>
-		<% end %>
-
-
-		</div>
 
 		<div class="col-sm-4">
 			<h3 class="h3-title">Activity</h3>
