--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -268,8 +268,15 @@
   th, td {
     border: 1px solid #fff;
     padding: 8px;
+    a {
+      color: inherit;
+    }
+  }
+  tbody tr:hover td {
+    background: #666666;
   }
 }
+
 
 #navbar-drop {
     padding: 0px;
