--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -216,7 +216,7 @@
 .footer {
       position: absolute;
       overflow: hidden;
-      background-color: #2B55B2;
+      background-color: #272121;
       width: 100%;
       height: 200px;
     }
