--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,14 @@
-<div class="article">	
+<div class="article">
 
 	<div class="article-title h1"><%= @article.title %></div>
-	
+
 	<% if @article.url %>
 		<div class="article-image"><%= image_tag(@article.image, width: '500') %></div>
 		<%= link_to @article.url, target: "_blank", class: 'btn btn-default' do %>
 			View article from original source
 		<% end %>
 	<% end %>
-	
+
 	<% if signed_in? && current_user.admin? %>
     <% unless @article.url %>
       <%= link_to 'Edit Article', edit_article_path(@article) %>
@@ -32,6 +32,8 @@
 
 <% if signed_in? %>
 	<%= link_to 'Reply This Article', new_article_comment_path(@article) %>
+<% else %>
+	<%= link_to 'Reply This Article', '/auth/steam' %>
 <% end %>
 
 <% @article.comments.each do |comment| %>
